# alsa-extensions

./: .envrc  .gitignore  CMakeLists.txt  README.md
docs/: Callbacks.md  Doxyfile.in  Duplex.md  Fifo.md  Midi.md  Timers.md  Variants.md  Waits.md  Xruns.md  alsa-lib.md  alsa-pcm.md
docs/examples/: Waits.md  Xfer.md  Xruns.md  alsa-jack.md  alsa-utils.md
examples/: CMakeLists.txt  jack2.c  latency.c
examples/alsaloop/: alsaloop.c  alsaloop.h
examples/audio_time/: audio_time.c
examples/duplex_demo/: duplex_demo.c
examples/jack2/: jack2.c  jack2.h
examples/latency/: latency.c  latency.h  old_latency.h
examples/latency_mmap/: latency_mmap.c
examples/tuner/: tuner.c
html/: graph_legend.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_1.js  searchdata.js
include/: buffer.h  callback.h  cmdopts.h  duplex.h  interface.h  memops.h  params.h  pcm_lfloat.h  playback.h  pollfds.h  ring.h  timer.h  types.h  waits.h  xrun.h
include/sndx/: buffer.h  callback.h  duplex.h  fifo.h  params.h  pcm_lfloat.h  plugin_ops.h  pollfds.h  ring.h  rtobject.h  timer.h  types.h  xrun.h
latex/: md_README.tex
refs/: CMakeLists.txt
refs/latency/: latency.c  latency.md
refs/seq/: seq-decoder.c  seq-sender.c  seq.c
src/: buffer.c  callback.c  duplex.c  memops.c  params.c  pcm_lfloat.c  playback.c  pollfds.c  ring.c  timer.c  xrun.c
tests/: CMakeLists.txt  test_buffer.c  test_convert.c  test_duplex.c  test_memops.c  test_memops_interleaved.c  test_metronome.c  test_params.c  test_playback.c  test_ring.c  test_rtobject_v1.c  test_rtobject_v2.c  test_timer.c  test_timer_drift_const_abs_wakeup.c  test_timer_drift_const_period.c  test_timer_pcm_drift.c  test_timer_pcm_drift_hstamp.c  timer_pcm_drift_hstamp.sh
tools/: CMakeLists.txt  dump_rawmidi.c  list_devices.c  list_midi_devices.c
